syntax = "proto3";
option go_package = "github.com/etesami/ping-pong-go/pkg/protoc";
package ping_pong_go;

service Message {
    rpc SendData(Data) returns (Ack);
    rpc SendDataReceiveAck(Data) returns (Ack);
}

message Data {
    bytes payload = 1;
    string sent_timestamp = 2;
}

message Ack {
    string status = 1;
    string payload = 2;
    string original_sent_timestamp = 3;
    string received_timestamp = 4;
    string ack_sent_timestamp = 5;
}